check box works

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,6 +2,11 @@
 
 <ul>
   <% @tasks.each do |task| %>
-    <li><%= task.title %></li>
+    <li><% if task.completed == false %>
+      <img src="https://www.flaticon.com/svg/static/icons/svg/25/25235.svg" alt="">
+      <% else %>
+      <img src="https://toppng.com/uploads/preview/checked-checkbox-icon-checkbox-ico-115632629493xkxpf63d8.png" alt="">
+      <% end %> 
+     <%= task.title %></li>
   <% end %>
 </ul>
