--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,12 +2,14 @@
 
 <ul>
   <% @tasks.each do |task| %>
-    <li><% if task.completed == false %>
-      <img src="https://www.flaticon.com/svg/static/icons/svg/25/25235.svg" alt="">
+    <li>
+      <% if task.completed == false %>
+        <img src="https://www.flaticon.com/svg/static/icons/svg/25/25235.svg" alt="">
       <% else %>
-      <img src="https://toppng.com/uploads/preview/checked-checkbox-icon-checkbox-ico-115632629493xkxpf63d8.png" alt="">
+        <img src="https://toppng.com/uploads/preview/checked-checkbox-icon-checkbox-ico-115632629493xkxpf63d8.png" alt="">
       <% end %> 
-     <%= link_to task.title, task_path(task)%></li>
+      <%= link_to task.title, task_path(task)%> 
+    </li>
   <% end %>
 </ul>
 
