--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,7 +8,7 @@
 </p>
 
 <%= link_to  "Edit task", edit_task_path %>
-<%= link_to "Delete",
+<%= link_to image_tag("poubelle.jpg", border: 0),
             task_path(@task),
             method: :delete,
             data: { confirm: "Are you sure?" } %>
