--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -9,6 +9,10 @@
         <img src="https://toppng.com/uploads/preview/checked-checkbox-icon-checkbox-ico-115632629493xkxpf63d8.png" alt="">
       <% end %> 
       <%= link_to task.title, task_path(task)%> 
+      <%= link_to image_tag("poubelle.jpg", border: 0),
+            task_path(task),
+            method: :delete,
+            data: { confirm: "Are you sure?" } %>
     </li>
   <% end %>
 </ul>
